# circular_buffer

./: CMakeLists.txt  IModule.h  RingBuffer.h  WrapBuffer.h  main.cpp  module.cpp  readme.txt  ring buffer.vcxproj  ring buffer.vcxproj.filters  unittests.cpp
src/: Color.h  Imodule.h  Module1.cpp  Module1.h  Module2.cpp  Module2.h  Module3.cpp  Module3.h  RingBuffer.h  main.cpp  unittests.cpp
x64/Debug/: module.nativecodeanalysis.sarif  ring buffer.exe.recipe  ring buffer.ilk  unittests.nativecodeanalysis.sarif  unittests.nativecodeanalysis.xml  vc143.idb
x64/Debug/ring buffer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  ring buffer.lastbuildstate
